--- a/ghostosint/templates/opts.tmpl
+++ b/ghostosint/templates/opts.tmpl
@@ -107,7 +107,7 @@
 
     <table class='table table-bordered table-striped'>
     <tbody>
-    <tr><td>汇总</td><td>${summary}<br/><br/>${description}</td></tr>
+    <tr><td>简介</td><td>${summary}<br/><br/>${description}</td></tr>
 
     % if categories:
     <tr><td>分类:</td><td>${', '.join(categories)}</td><tr>
